improvement(map): fix button overflow in mobile

--- a/plugins/lime-plugin-locate/src/style.less
+++ b/plugins/lime-plugin-locate/src/style.less
@@ -25,7 +25,7 @@
     transform: translateY(-100%);
     z-index: 999;
     button {
-        width: 50%;
+        min-width: 60%;
         background-color: white;
     }
 }
